Fixed background image clipping

--- a/task-05/main.css
+++ b/task-05/main.css
@@ -13,7 +13,11 @@ body {
     min-width:100vw;
 }
 
-body#index {background-image: url("assets/backdrop.png");}
+body#index {background-image: url("assets/backdrop.png"); 
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 body#shop {background-color: #0a1b37;}
 
 a {
